buildscript {
    dependencies {
        classpath("org.springframework.boot.experimental:spring-boot-thin-gradle-plugin:1.0.28.RELEASE")
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.7.5")
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'org.liquibase.gradle' version '2.0.4'
}

apply plugin: 'org.springframework.boot'
apply plugin: 'org.springframework.boot.experimental.thin-launcher'
assemble.dependsOn = [thinJar]

group = 'pl.kozubek'

sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
repositories {
    mavenCentral()
}

dependencies {
    // spring-boot
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // myBaits
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'

    // mySql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // liquibase
    implementation 'org.liquibase:liquibase-core:4.17.2'
    liquibaseRuntime 'org.liquibase:liquibase-core:4.17.2'
    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.2'

    // aws lambda
    implementation "org.springframework.cloud:spring-cloud-function-adapter-aws:3.2.8"
    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.347')
    implementation 'com.amazonaws:aws-java-sdk-s3'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.9.22'
    implementation group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.0.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'pl.kozubek.writerlambda.Application'
        )
    }
}
